--- a/style.css
+++ b/style.css
@@ -1,82 +1,90 @@
 body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
+  color: #fff;
+  padding: 10px;
 }
 header img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-  }
-  
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
+main{display: flex;
+flex-direction: column;
+flex-grow: 1;}
+footer{
+    min-height: 10px;
+}
 
 nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
-	display: inline-block;
-	margin-right: 20px;
+  display: inline-block;
+  margin-right: 20px;
 }
 
 nav ul li a {
-	color: #333;
-	text-decoration: none;
-	padding: 5px 10px;
-	border: 1px solid #333;
-	border-radius: 5px;
+  color: #333;
+  text-decoration: none;
+  padding: 5px 10px;
+  border: 1px solid #333;
+  border-radius: 5px;
 }
 
 nav ul li a:hover {
-	background-color: #333;
-	color: #fff;
+  background-color: #333;
+  color: #fff;
 }
 
 section {
-	margin: 20px;
+  margin: 20px;
 }
 
 h2 {
-	color: #333;
+  color: #333;
 }
 
 .index {
-	height: 20px;
-	background-color: #eee;
-	border-radius: 10px;
-	margin-bottom: 10px;
-	position: relative;
+  height: 20px;
+  background-color: #eee;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  position: relative;
 }
 
 .bar {
-	height: 100%;
-	background-color: #333;
-	border-radius: 10px;
-	position: absolute;
-	top: 0;
-	left: 0;
+  height: 100%;
+  background-color: #333;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 span {
-	position: absolute;
-	top: 0;
-	right: 0;
-	padding: 2px 5px;
-	background-color: #333;
-	color: #fff;
-	border-radius: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 2px 5px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 5px;
 }
-.backgroundOrange{background-color: #f44336;}
-.colorWhite{color: white}
+.backgroundBrown {
+  background-color: #333;
+}
+.colorWhite {
+  color: white;
+}
