--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: font-family: 'Wix Madefor Text', sans-serif;
+  font-family: 'Wix Madefor Text', sans-serif;
   font-size: larger;
 }
 ul{
