--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ header div{
   min-height: 40px;
  
 }
+footer{
+  color: var(--colorBlack);
+  min-height: 40px;
+}
 header img {
   display: block;
   margin: 0 auto;
